--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Prudential - Financial Wellness Quiz</title>
+    <title>Financial Wellness Quiz</title>
 
     <meta name="description" content="this is a description">
     <meta name="keywords" content="retirement, 401k, finance ">
