--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                   <figcaption>
                     <h3>Saver</h3>
                     <p>Your saving habits meets or exceeds the goal. </p>
-                    <a href="portfolio-item.html">View more</a>
+                    <a href="#">View more</a>
                   </figcaption>
                 </figure>
               </div>
@@ -59,7 +59,7 @@
                   <figcaption>
                     <h3>Prudent</h3>
                     <p>You save some, but not the recommended amount</p>
-                    <a href="portfolio-item.html">View more</a>
+                    <a href="#">View more</a>
                   </figcaption>
                 </figure>
               </div>
@@ -71,7 +71,7 @@
                   <figcaption>
                     <h3>Spender</h3>
                     <p>Not yet saving the outlined goal</p>
-                    <a href="portfolio-item.html">View more</a>
+                    <a href="#">View more</a>
                   </figcaption>
                 </figure>
               </div>
